--- a/frontend/stylesheet.css
+++ b/frontend/stylesheet.css
@@ -10,8 +10,6 @@
 .controls {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    /*grid-auto-columns: 1fr;*/
-    /*grid-auto-flow: column;*/
     grid-gap:5px;
 }
 
@@ -25,6 +23,22 @@
     grid-template-columns: max-content max-content;
     grid-gap:5px;
     justify-content: center;
+}
+
+.urlsContainer {
+    grid-row: 1;
+    grid-column: 2
+}
+
+.urlTextboxes {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-gap:5px;
+    justify-content: center;
+}
+
+.songTextBox {
+
 }
 
 div.selectControls label       { text-align:right; }
