--- a/frontend/stylesheet.css
+++ b/frontend/stylesheet.css
@@ -10,11 +10,12 @@
 .controls {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 3fr auto 1fr auto;
     grid-gap:5px;
 }
 
 .selectControlsContainer {
-    grid-row: 2;
+    grid-row: 3;
     grid-column: 2
 }
 
@@ -26,7 +27,7 @@
 }
 
 .urlsContainer {
-    grid-row: 1;
+    grid-row: 2;
     grid-column: 2
 }
 
@@ -47,21 +48,21 @@ div.selectControls label:after { content: ":"; }
 .playlistTextBox {
     width: 300px;
     margin: auto;
-    grid-row: 1;
+    grid-row: 2;
     grid-column: 2;
 }
 
 .newPlaylistTextBox {
     width: 300px;
     margin: auto;
-    grid-row: 4;
+    grid-row: 5;
     grid-column: 2;
 }
 
 .convertButton {
     width: 100px;
     margin: auto;
-    grid-row:3;
+    grid-row:4;
     grid-column: 2;
 }
 
