--- a/frontend/stylesheet.css
+++ b/frontend/stylesheet.css
@@ -14,25 +14,6 @@
     margin: 0;
 }
 
-/*
-.heading {
-    margin: auto;
-    text-align: center
-}
-*/
-
-/*
-.controls {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 0.5fr auto 1fr auto;
-    grid-gap: 5px;
-    padding-top: 50px;
-    padding-bottom: 10px;
-    background-color: #333533;
-}
-*/
-
 .controls {
     display: grid;
     grid-template-columns: 1fr;
@@ -57,20 +38,6 @@
     grid-gap:5px;
     justify-content: center;
 }
-
-/*
-.urlsContainer {
-    grid-row: 2;
-    grid-column: 2
-}
-*/
-
-/*
-.urlTextboxes {
-    display: grid;
-    place-items: center;
-}
-*/
 
 .songTextBox {
     width: 300px;
@@ -203,4 +170,13 @@ reference
 .serviceSelect {
     width: 100px;
     margin: auto;
+}
+
+.descriptionText {
+    font-family: Nunito,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
+    text-align: center;
+    margin-top: 30px;
+    font-size: 24;
+    margin-left: 10%;
+    margin-right: 10%;
 }
