--- a/frontend/stylesheet.css
+++ b/frontend/stylesheet.css
@@ -110,9 +110,6 @@ reference
     border-radius: 20px;
     margin: 0.8rem 0;
     color: rgb(1, 32, 32);
-    /*
-    justify-content: center;
-    */
 }
  
 .inputUrlTextBox input::placeholder{
@@ -179,4 +176,11 @@ reference
     font-size: 24;
     margin-left: 10%;
     margin-right: 10%;
+}
+
+.urlSublabelValidation {
+    font-family: Nunito,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
+    color: red;
+    inline-size: 50%;
+    text-align: center;
 }
